--- a/_config.yml
+++ b/_config.yml
@@ -579,7 +579,7 @@ needmoreshare2:
 #google_site_verification:
 
 # Google Analytics
-#google_analytics:
+google_analytics: UA-122682174-1
 
 # Bing Webmaster tools verification setting
 # See: https://www.bing.com/webmaster/
